Fixed bug #43020 (Warning message is missing with shuffle() and more than one argument)